# sv

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.autotools  README.md  acinclude.m4  appveyor.yml  autogen.sh  configure.ac  configure.sh  prepare.sh  xmake.lua
cmake/: properties.cmake
include/: semver.h
m4/: mm-libtool-library-versions.m4
scripts/: libsv.pc.in
src/: comp.c  id.c  id.h  num.c  num.h  range.c  semver.c  semvers.c  utils.c  version.c  xsemver.h
test/: CMakeLists.txt  comp.c  comparison.c  match.c  range.c  semver.c  semvers.c  utils.c  xmake.lua
